:bug: Fix Table header text align when colspan=1 (#20463)
https://github.com/ant-design/ant-design/issues/20126#issuecomment-563307001

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -49,7 +49,7 @@
     border-bottom: @border-width-base @border-style-base @border-color-split;
     transition: background 0.3s ease;
 
-    &[colspan] {
+    &[colspan]:not([colspan='1']) {
       text-align: center;
     }
 
